--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.2",
     "react-star-rating-input": "^8.0.1",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
