--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "^7.0.2",
     "react-star-rating-input": "^8.0.1",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.2",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
